[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "nanomix"
version = "0.1.1"
description = "Methods for cell type deconvolution from Oxford Nanopore methylation calling"
readme = "README.md"
keywords = ["nanopore", "methylation", "deconvolution"]
authors = [ { name = "Jonathan Broadbent", email = "jonbroad15@gmail.com" },
            { name = "Jared Simpson", email = "jsimpson@oicr.on.ca" } ]
maintainers = [ { name = "Jonathan Broadbent", email = "jonbroad15@gmail.com" } ]
dependencies = ["pandas", "pyranges", "numpy~", "scipy", "matplotlib", "ray"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[projects.urls]
repository = "https://github.com/simpsonlab/nanomix"

[project.scripts]
nanomix = "nanomix:main"

[tool.maturin]
include = ["README.md", "LICENSE", "atlases/*"]
python-source = "python"
